      - Fixed: proper processing of database query return values during installation and uninstallation
      - Fixed: notice during order state update
      - Added: showing carrier extra content for (probably broken) third party templates
      - Fixed: proper generation and use of translations called outside the module's main class file
2.1.8 - Fixed: fix of bug in PrestaShop version lower than 1.7.6, when saving a change of pickup point
        in the administration, especially in the case of Z-BOXes (getting JSON correctly)
2.1.9 - Added: possibility to edit order weight in Packeta order administration
2.1.10 - Fixed: widget opening in order administration
	     - Fixed: Fix: weight units - accepting capital letters	
2.1.11 - Updated: order weight editing in Packeta order administration: saving only changed values, better display of results
       - Added: Product weight in grams is now supported. If the weight of the products is in grams, the module converts the weight of the shipment to kilograms before exporting it.
       - Updated: pickup point update changed to carrier update, improving speed and reliability
       - Fixed: no more displaying of selected pickup point on confirmation page if the order is not a pickup point order
       - Updated: wider support for modified checkout templates (selector to hide widget button update),
         .carrier-extra-content now does not have to have display 'block' and is checked if is visible
       - Fixed: functionality of KnowBand SuperCheckout when no shipping method is preselected
       - Fixed: fresh checkout no longer throws error in development mode
2.1.12 - Fixed: weight loading and setting in case Packeta orders are paged
2.1.13 - Updated: improved compatibility with PHP versions 7.2,7.4
2.1.14 - Fixed: treated a rare situation where the payment module cannot be instantiated
       - Fixed: functionality of Packeta widget button in KnowBand SuperCheckout when no shipping method is preselected